[workspace]
resolver = "2"

members = [
    "treasury",
    "pegkeeper",
    "test-suites",
    "bridge-oracle",
    "dao-utils",
    "mocks/mock-pegkeeper",
    "mocks/mock-treasury"]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true # DEV: Do not remove this check - doing so will create vulnerabilities
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "22.0.4"

[workspace.dependencies.soroban-fixed-point-math]
version = "1.3.0"

[workspace.dependencies.sep-40-oracle]
version = "1.2.0"

[workspace.dependencies.sep-41-token]
version = "1.2.0"