[package]
name = "test-suites"
version = "0.0.0"
authors = ["Blend Capital <gm@blend.capital>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rand = { version = "0.7.3" }
soroban-fixed-point-math = { workspace = true }
cast = { workspace = true }
sep-40-oracle = { workspace = true, features = ["testutils"] }
sep-41-token = { workspace = true, features = ["testutils"] }