[package]
name = "test-suites"
version = "0.0.0"
authors = ["Blend Capital <gm@blend.capital>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-fixed-point-math = { workspace = true }
sep-40-oracle = { workspace = true, features = ["testutils"] }
sep-41-token = { workspace = true, features = ["testutils"] }
treasury = { path = "../treasury", features = ["testutils"] }
mock-treasury = { path = "../mocks/mock-treasury", features = ["testutils"] }
bridge-oracle = { path = "../bridge-oracle", features = ["testutils"] }
pegkeeper = { path = "../pegkeeper", features = ["testutils"] }
mock-pegkeeper = { path = "../mocks/mock-pegkeeper", features = ["testutils"] }
admin = { path = "../admin", features = ["testutils"] }