[package]
name = "treasury-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = [
    "soroban-sdk/testutils",
]

[dependencies]
soroban-sdk = { workspace = true }
sep-40-oracle = { workspace = true}


[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sep-41-token = { workspace = true, features = ["testutils"] }
rand = {version = "0.7.3"}