[package]
name = "treasury"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = [
    "soroban-sdk/testutils",
]

[dependencies]
soroban-sdk = { workspace = true }
sep-41-token = { workspace = true}


[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[metadata]
soroban_no_panics = true